Kubernetes/Example/whoami.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - image: traefik/whoami:latest
          imagePullPolicy: IfNotPresent
          name: whoami
          ports:
            - containerPort: 80
#Mount volume with subpath to have a folder for the deployment
          volumeMounts:
            - name: pvc-nfs-k3s-whoami-volume
              mountPath: /srv/folder
              subPath: whoami
      volumes:
        - name: pvc-nfs-k3s-whoami-volume
          persistentVolumeClaim:
            claimName: pvc-nfs-k3s--whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: whoami.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-svc
                port:
                  number: 80
